# AI_solo_coder_task_A_065

./: .env  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  config.example.toml  config.toml
backend/src/: alarm.rs  alarm_dispatcher.rs  alarm_engine.rs  alarm_manager.rs  api.rs  api_server.rs  clickhouse_client.rs  config.rs  data_processor.rs  ethercat_driver.rs  handlers.rs  iso22400_adapter.rs  main.rs  metrics.rs  models.rs  mqtt_client.rs  prediction.rs  rul_predictor.rs  signal_processing.rs  udp_server.rs  vibration_analyzer.rs  websocket_server.rs
clickhouse/: init.sql
deploy/clickhouse/: config.xml  init.sql
deploy/emqx/: emqx.conf
deploy/grafana/datasources/: prometheus.yml
deploy/prometheus/: prometheus.yml
docker/: clickhouse_init.sql  docker-compose.yml
frontend/: Dockerfile  api.js  app.js  config.js  index.html  nginx.conf  ranking.js  sensor-charts.js  spindle-canvas.js  spindle_profile.js  stats.js  styles.css  waterfall-canvas.js  waterfall_plot.js
frontend/css/: style.css
frontend/js/: api.js  charts.js  dashboard.js  main.js  sensor_detail.js  spectrum.js  spindle-canvas.js  spindle.js
frontend/src/: app.js  ranking.js  sensor_panel.js  spectrum_chart.js  spindle_diagram.js  style.css
scripts/: ethercat_simulator.py
simulator/: Dockerfile  ethercat_simulator.py  ethercat_udp_simulator.py  requirements.txt
