[package]
name = "spindle-health-monitor"
version = "0.1.0"
edition = "2021"
description = "精密数控机床主轴健康监控与剩余寿命预测系统"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse-rs = { version = "1.0", features = ["tokio"] }
rumqttc = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
csv = "1.3"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
