[package]
name = "spindle-monitor-backend"
version = "0.1.0"
edition = "2021"
description = "精密数控机床主轴健康监控与剩余寿命预测系统 - 后端服务"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse-rs = { version = "0.1", git = "https://github.com/loyd/clickhouse-rs.git", features = ["tokio_io"] }
klickhouse = "0.9"
rumqttc = "0.23"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
thiserror = "1.0"
byteorder = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
ndarray = "0.15"
fft = "0.2"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
