[package]
name = "cnc-monitor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
clickhouse-rs = { version = "2.0", features = ["tokio-rustls"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rustfft = "6.2"
ndarray = "0.15"
ndarray-rand = "0.14"
paho-mqtt = "0.12"
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"
byteorder = "1.5"
toml = "0.8"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
